# x121

./: .env.example  .gitignore  CONVENTIONS.md  IMPLEMENTATION_PLAN.md  Makefile  package.json  pnpm-lock.yaml
apps/backend/: Cargo.toml
apps/backend/crates/agent/: Cargo.toml
apps/backend/crates/agent/src/: collector.rs  lib.rs  main.rs  restart.rs  sender.rs
apps/backend/crates/agent/tests/: collector_tests.rs
apps/backend/crates/api/: Cargo.toml
apps/backend/crates/api/src/: config.rs  error.rs  lib.rs  main.rs  query.rs  request.rs  response.rs  router.rs  state.rs
apps/backend/crates/api/src/auth/: jwt.rs  mod.rs  password.rs
apps/backend/crates/api/src/background/: activity_persistence.rs  activity_retention.rs  activity_tracing.rs  delivery_assembly.rs  export_archive.rs  metrics_retention.rs  mod.rs  schedule_executor.rs  video_transcode.rs
apps/backend/crates/api/src/engine/: dispatcher.rs  health_aggregator.rs  mod.rs  progress.rs
apps/backend/crates/api/src/handlers/: activity_log.rs  admin.rs  annotation.rs  annotation_preset.rs  api_keys.rs  api_observability.rs  approval.rs  assets.rs  audit.rs  auth.rs  auto_retry.rs  avatar.rs  avatar_dashboard.rs  avatar_deliverable_ignore.rs  avatar_group.rs  avatar_image.rs  avatar_image_overrides.rs  avatar_ingest.rs  avatar_metadata.rs  avatar_metadata_version.rs  avatar_review.rs  avatar_scene_overrides.rs  avatar_speech.rs  avatar_speech_deliverable.rs  backup_recovery.rs  batch_metadata.rs  batch_review.rs  branching.rs  budget_quota.rs  bug_reports.rs  character.rs  character_dashboard.rs  character_deliverable_ignore.rs  character_group.rs  character_ingest.rs  character_metadata.rs  character_metadata_version.rs  character_review.rs  character_scene_overrides.rs  character_speech.rs  (+135 more)
apps/backend/crates/api/src/middleware/: auth.rs  mod.rs  rbac.rs
apps/backend/crates/api/src/notifications/: mod.rs  router.rs
apps/backend/crates/api/src/routes/: activity_log.rs  admin.rs  annotation.rs  annotation_preset.rs  api_observability.rs  approval.rs  assets.rs  audit.rs  auth.rs  auto_retry.rs  avatar.rs  avatar_dashboard.rs  avatar_deliverable_ignore.rs  avatar_image.rs  avatar_image_overrides.rs  avatar_ingest.rs  avatar_metadata.rs  avatar_metadata_version.rs  avatar_review.rs  avatar_scene_overrides.rs  avatar_speech.rs  backup_recovery.rs  batch_metadata.rs  batch_review.rs  branching.rs  budget_quota.rs  bug_reports.rs  character.rs  character_dashboard.rs  character_deliverable_ignore.rs  character_ingest.rs  character_metadata.rs  character_metadata_version.rs  character_review.rs  character_scene_overrides.rs  character_speech.rs  checkpoints.rs  cloud_providers.rs  collaboration.rs  comparison.rs  (+117 more)
apps/backend/crates/api/src/scripting/: mod.rs  orchestrator.rs
apps/backend/crates/api/src/static/: recovery_runbook.html
apps/backend/crates/api/src/ws/: handler.rs  heartbeat.rs  manager.rs  mod.rs
apps/backend/crates/api/tests/: auth_api.rs  entity_api.rs  error_handling.rs  hardware_api.rs  health.rs  scene_catalog_api.rs  scene_video_version_api.rs  script_api.rs  trash_api.rs  validation_api.rs  video_api.rs  ws_manager.rs
apps/backend/crates/api/tests/common/: mod.rs
apps/backend/crates/cloud/: Cargo.toml
apps/backend/crates/cloud/src/: lib.rs  lifecycle.rs  registry.rs  seed.rs  storage.rs  storage_provider.rs
apps/backend/crates/cloud/src/services/: mod.rs  monitoring.rs  reconciliation.rs  scaling.rs
apps/backend/crates/comfyui/: Cargo.toml
apps/backend/crates/comfyui/src/: api.rs  client.rs  events.rs  lib.rs  manager.rs  messages.rs  processor.rs  reconnect.rs
apps/backend/crates/core/: Cargo.toml
apps/backend/crates/core/src/: activity.rs  alert.rs  annotation.rs  api_keys.rs  api_observability.rs  approval.rs  assembly.rs  audit.rs  auto_retry.rs  avatar_dashboard.rs  avatar_ingest.rs  avatar_library.rs  backup_recovery.rs  batch_metadata.rs  batch_production.rs  batch_review.rs  branching.rs  budget_quota.rs  bug_report.rs  channels.rs  character_dashboard.rs  character_ingest.rs  character_library.rs  checkpointing.rs  clip_filename_parser.rs  clip_qa.rs  cloud.rs  cloud_scaling.rs  collaboration.rs  command_palette.rs  compliance.rs  config_export.rs  consistency_report.rs  contact_sheet.rs  crypto.rs  dashboard_customization.rs  delivery.rs  diff.rs  directors_view.rs  directory_scanner.rs  (+91 more)
apps/backend/crates/core/src/assets/: dependencies.rs  impact.rs  mod.rs  registry.rs
apps/backend/crates/core/src/hardware/: mod.rs  thresholds.rs
apps/backend/crates/core/src/reclamation/: mod.rs  protection.rs  types.rs
apps/backend/crates/core/src/scripting/: binary.rs  executor.rs  mod.rs  python.rs  shell.rs  status.rs  subprocess.rs
apps/backend/crates/core/src/storage/: factory.rs  local.rs  mod.rs
apps/backend/crates/core/src/validation/: conflict.rs  evaluator.rs  import_preview.rs  mod.rs  rules.rs
apps/backend/crates/db/: Cargo.toml
apps/backend/crates/db/src/: lib.rs
apps/backend/crates/db/src/models/: activity_log.rs  annotation_preset.rs  api_key.rs  api_observability.rs  approval.rs  asset.rs  audit.rs  avatar.rs  avatar_deliverable_ignore.rs  avatar_group.rs  avatar_image.rs  avatar_image_override.rs  avatar_ingest.rs  avatar_media_assignment.rs  avatar_metadata_version.rs  avatar_review.rs  avatar_scene_override.rs  avatar_scene_prompt_override.rs  avatar_speech.rs  branch.rs  (+168 more)
apps/backend/crates/db/tests/: bootstrap.rs  entity_crud.rs  scene_catalog.rs  scene_video_version.rs  schema_conventions.rs  soft_delete.rs
apps/backend/crates/events/: Cargo.toml
apps/backend/crates/events/src/: activity.rs  bus.rs  digest.rs  lib.rs  persistence.rs
apps/backend/crates/pipeline/: Cargo.toml
apps/backend/crates/pipeline/src/: completion_handler.rs  context_loader.rs  error.rs  gen_log.rs  lib.rs  loop_driver.rs  output_classifier.rs  snapshot.rs  submitter.rs  version_creator.rs  workflow_builder.rs
apps/backend/crates/worker/: Cargo.toml
apps/backend/crates/worker/src/: event_loop.rs  lib.rs  main.rs
apps/backend/scripts/: fix_metadata.py
(+2651 files in other folders)
