[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/api",
    "crates/events",
    "crates/comfyui",
    "crates/pipeline",
    "crates/worker",
    "crates/agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "timeout", "catch-panic"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth / Crypto
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
rand = { version = "0.9", features = ["thread_rng"] }

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Config
dotenvy = "0.15"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Regex
regex = "1"

# Async streams / futures combinators
futures = "0.3"

# System interfaces (disk stats, etc.)
libc = "0.2"

# Testing
assert_matches = "1"
http-body-util = "0.1"

# Workspace crates
x121-core = { path = "crates/core" }
x121-db = { path = "crates/db" }
x121-events = { path = "crates/events" }
x121-comfyui = { path = "crates/comfyui" }
x121-pipeline = { path = "crates/pipeline" }
