[package]
name = "x121-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "x121_agent"
path = "src/lib.rs"

[[bin]]
name = "x121-agent"
path = "src/main.rs"

[dev-dependencies]
serde_json = { workspace = true }

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
nvml-wrapper = "0.10"
x121-core = { workspace = true }
