[package]
name = "trulience-api"
version.workspace = true
edition.workspace = true

[lib]
name = "trulience_api"
path = "src/lib.rs"

[[bin]]
name = "trulience-api"
path = "src/main.rs"

[dependencies]
trulience-core = { workspace = true }
trulience-db = { workspace = true }
trulience-events = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
http-body-util = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
