[package]
name = "x121-api"
version.workspace = true
edition.workspace = true

[lib]
name = "x121_api"
path = "src/lib.rs"

[[bin]]
name = "x121-api"
path = "src/main.rs"

[dependencies]
x121-core = { workspace = true }
x121-comfyui = { workspace = true }
x121-db = { workspace = true }
x121-events = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
http-body-util = { workspace = true }
sqlx = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tower = { workspace = true }
