[package]
name = "x121-cloud"
version.workspace = true
edition.workspace = true

[dependencies]
x121-core = { workspace = true }
x121-comfyui = { workspace = true }
x121-db = { workspace = true }
x121-events = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
