[package]
name = "trulience-comfyui"
version.workspace = true
edition.workspace = true

[dependencies]
trulience-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
