[package]
name = "x121-comfyui"
version.workspace = true
edition.workspace = true

[dependencies]
x121-core = { workspace = true }
x121-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
