[package]
name = "x121-core"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
