[package]
name = "x121-db"
version.workspace = true
edition.workspace = true

[dependencies]
x121-core = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
