[package]
name = "trulience-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
trulience-core = { workspace = true }
trulience-comfyui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
