[package]
name = "x121-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
x121-core = { workspace = true }
x121-comfyui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
