[package]
name = "x121-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
x121-core = { workspace = true }
x121-comfyui = { workspace = true }
x121-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
