[package]
name = "x121-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "x121-worker"
path = "src/main.rs"

[dependencies]
x121-core = { workspace = true }
x121-db = { workspace = true }
x121-events = { workspace = true }
x121-pipeline = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
